# credence-governor

./: .gitignore  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
adapters/claude-code/: README.md  plugin_hook.py  plugin_session_start.py  pyproject.toml  settings.example.json
adapters/claude-code/.claude-plugin/: plugin.json
adapters/claude-code/credence_governor_claude_code/: __init__.py  client.py  effectors.py  feedback.py  hook.py  install.py  pending.py  session_start.py  transcript.py
adapters/claude-code/hooks/: hooks.json
adapters/claude-code/tests/: conftest.py  test_effectors.py  test_feedback_cli.py  test_hook.py  test_install.py  test_result_hook.py  test_roundtrip.py  test_session_start.py  test_transcript.py
adapters/openclaw/: README.md  openclaw.plugin.json  package.json  tsconfig.json
benchmarks/approach_dominance/: .gitignore  DESIGN.md  LOSS_MAP.md  README.md  SUMMARY.md  aggregate.py  arms.py  dominance.py  harm_compare.py  harness_matrix.py  loss_triage.py  profiles.py  routing_belief.py  scenarios.py  synthetic_competitors.py
benchmarks/governor_compare/: .gitignore  COMPARISON.md  INTEGRATED.md  OUTCOMES.md  SUCCESS.md  aggregate.py  axes_summary.json  cache.py  compare.py  governors.py  ground_outcomes.py  integrate.py  integrate_aggregate.py  integrate_build.py  outcomes.py  rivals_llm.py  streams.py  success.py  success_aggregate.py  success_compare.py  swebench.py  swebench_verified_sample.jsonl
benchmarks/outcome_bench/: OUTCOME_BENCH.md  bench.py  corpus.py  (+6 more)
docs/: RETENTION.md  author-boundary-pack-rd14.md  coding-threat-matched-harm-model.md  engine-wire-requests.md  governance-roadmap.md  membrane-shadow.md  rd14-boundary.patch  rd14-boundary.sh  rd14-registration-draft.md
scripts/: check.sh
(+41 files in other folders)
